KSENROLL-13099: Fix for cross listing title alignment in Manage CO.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70203 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2016,10 +2016,6 @@ section.uif-disclosure {
   }
 }
 
-#KS-CourseOffering-Title .uif-label{
-  display: initial;
-}
-
 /*
   Positioning the meta-data on top of the dataTable causes the table showing on the right on some browsers.
   Float left to show on the left.
